--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -1,11 +1,18 @@
 <!DOCTYPE html>
-<html lang="en">
+<html xmlns="http://www.w3.org/1999/xhtml" xmlns:th="http://www.thymeleaf.org">
+
 <head>
     <meta charset="UTF-8">
     <title>Home</title>
     <style type="text/css"><!-- @import"/css/style.css"; --></style>
 </head>
+
 <body>
+    <br>
+    <br>
+    <h3 align="center">Index.html</h3>
+  <br>
+  <br>
   <br>
   <h2 align="center">Hiobs Client</h2>
   <div align="center"><small id="connectAnzeige"></small></div>
@@ -47,8 +54,8 @@
   </div>
 
 
-  <script src="/js/sockjs.min.js"></script>
-  <script src="/js/stomp.min.js"></script>
-  <script src="/js/main.js"></script>
+  <script src="/js/sockjs.js"></script>
+  <script src="/js/stomp.js"></script>
+  <script src="/js/socketConnect.js"></script>
 </body>
 </html>
