1. Version 0.0.3 2. auf Java ver.21 umgestellt, wail Strato Server: Ubuntu 24.04 unterstützt nur java ver.21 3. pom.xml für erstellung von jar-datei angepasst 4. jar-datei getestet 100% OK

--- a/src/main/resources/templates/login/maillogin.html
+++ b/src/main/resources/templates/login/maillogin.html
@@ -47,7 +47,7 @@
     <button type="submit" class="loginLink">E-MAIL&#160;&#160;PR&#220;FEN</button>
     <div class="leer3">&#160;</div>
 
-    <a href="/login/qrcode" class="loginLink">MIT&#160;&#160;QR-CODE&#160;&#160;ANMELDEN</a>
+    <a href="/login/qrlogin" class="loginLink">MIT&#160;&#160;QR-CODE&#160;&#160;ANMELDEN</a>
   </form>
   </div>
 
